# dydx-chain-stupid-node

./: Cargo.toml  README.md  build.rs
proto/: authentication_signature_message.proto  peer_info_message.proto  signed_authentication_message.proto
src/: config.rs  connection.rs  crypto.rs  lib.rs  main.rs  peer.rs  result.rs
src/connection/: handshake.rs  setup.rs
src/peer/: authenticate.rs  connection.rs  encryption.rs  setup.rs  version.rs
